Text in index.html geändert

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                         Regelmäßige Events, Lesekreise und offene Treffen laden dazu ein, neue Menschen kennenzulernen, Gedanken zu teilen und miteinander ins Gespräch zu kommen – ohne Erwartungsdruck, ohne Rechtfertigung, ohne Maske. <br/>
                         <br />
                         Pride & Pages versteht sich als Schutzraum, Treffpunkt und lebendiger Teil queerer Kultur.<br/>
-                        Ein Ort, an dem Worte verbinden, Identitäten sichtbar sind und Community wachsen darf.
+                        Ein Ort, an dem Worte verbinden, Identitäten sichtbar sind und Community wachsen darf. Schau doch einfach mal vorbei.
                     </p>
                 </div>
         
