--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
                 <li><a href="#submit">Empfehlung senden</a></li>
                 <li><a href="#reserve">Reservieren</a></li>
                 <li><a href="#events">Events</a></li>
+                <li>a href="#Speisekarte">Speisekarte</a></li>
             </ul>
         </nav>
     </header>
@@ -53,6 +54,7 @@
     </section>
 
     <!-- Abschnitt: Bücher -->
+     <!--TODO Übersicht über die Bücher stellen-->
     <section id="books">
         <h2>Queere Buchempfehlungen</h2>
         <p>Hier kommt sp&auml;ter eine Tabelle oder Karten-Layout hin.</p>
@@ -60,6 +62,7 @@
 
     <!-- Abschnitt: Empfehlung senden -->
     <section id="submit">
+        <!--TODO Formular fertigstellen-->
         <h2>Eigene Empfehlung einreichen</h2>
         <form>
             <label>Titel: <input type="text" /></label><br>
@@ -71,6 +74,7 @@
 
     <!-- Abschnitt: Reservierung -->
     <section id="reserve">
+        <!-- TODO Formular fertigstellen-->
         <h2>Tisch reservieren</h2>
         <form>
             <label>Name: <input type="text"></label><br>
@@ -83,10 +87,18 @@
 
     <!-- Abschnitt: Events -->
     <section id="events">
+        <!-- TODO ein paar fiktive Events auflisten -->
         <h2>Events</h2>
         <p>Hier kommen Events hin</p>
     </section>
 
+
+    <!-- Abschnitt: Speisekarte -->
+    <section id="speisekarte">
+        <!-- TODO ein fiktive Speisen und Getränke aufzählen -->
+        <h2>Speisekarte</h2>
+        <p>folgt/p>
+    </section>
         
     <footer>
        <p> &copy; Copyright by Pride &amp; Pages </p> <br/>
