--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <li><a href="#submit">Empfehlung senden</a></li>
                 <li><a href="#reserve">Reservieren</a></li>
                 <li><a href="#events">Events</a></li>
-                <li>a href="#Speisekarte">Speisekarte</a></li>
+                <li><a href="#Speisekarte">Speisekarte</a></li>
             </ul>
         </nav>
     </header>
