--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!-- Navigation -->
     <header>
         <h1>Pride & Pages</h1>
-        <p>Where pride meets prose.</p>
+        <p>Where pride meets prose.Nur ein Testitest</p>
         <nav>
             <ul>
                 <li><a href="#home">Start</a></li>
