Little Bug-Fixes

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <li><a href="#submit">Empfehlung senden</a></li>
                 <li><a href="#reserve">Reservieren</a></li>
                 <li><a href="#events">Events</a></li>
-                <li><a href="#Speisekarte">Speisekarte</a></li>
+                <li><a href="#speisekarte">Speisekarte</a></li>
             </ul>
         </nav>
     </header>
@@ -50,8 +50,8 @@
                     <img src="pic/cafe.jpg" alt="Kaffee auf einem Tisch">
                 </div>
             </div>
-        </section>
     </section>
+    
 
     <!-- Abschnitt: Bücher -->
      <!--TODO Übersicht über die Bücher stellen-->
@@ -81,7 +81,7 @@
         <form action=""> <!--TODO Formular funktioniert noch nicht-->
             <fieldset>
                 <legend>Persönliche Informationen</legend>
-                    <label for"pronomen">Pronomen</label>
+                    <label for="pronomen">Pronomen</label>
                         <input id="pronomen" name="pronomen" type="text" required maxlength="20"><br/>
                     <label for="name"> Vorname* </label> 
                         <input id="name" name="vorname" type="text" required maxlength="20"><br/>
@@ -104,7 +104,7 @@
                     <label for"datum">Datum</label>
                         <input id="datum" name="Datum" type="date" required><br/> <!--TODO Datum kann in der Vergangenheit liegen -->
                     <label for "uhrzeit">Uhrzeit</label>
-                        <input id="uhrzeit" name "Uhrzeut" type="time" required><br/> <!--TODO Uhrzeit an Öffnungszeiten anpassen-->
+                        <input id="uhrzeit" name "Uhrzeit" type="time" required><br/> <!--TODO Uhrzeit an Öffnungszeiten anpassen-->
                     <label for"personen>Anzahl der Personen</label>
                         <input id="personen" name="Personen" type="number" required maxlength="10"><br/>
                     <label for="sonstiges">Sonstige Angaben oder Hinweise zur Reservierung</label>
@@ -126,7 +126,7 @@
     <section id="speisekarte">
         <!-- TODO ein fiktive Speisen und Getränke aufzählen -->
         <h2>Speisekarte</h2>
-        <p>folgt/p>
+        <p>folgt</p>
     </section>
         
     <footer>
