--- a/index.html
+++ b/index.html
@@ -101,11 +101,11 @@
         
             <fieldset>
                 <label>Angaben zum Besuch</label>
-                    <label for"datum">Datum</label>
+                    <label for="datum">Datum</label>
                         <input id="datum" name="Datum" type="date" required><br/> <!--TODO Datum kann in der Vergangenheit liegen -->
-                    <label for "uhrzeit">Uhrzeit</label>
-                        <input id="uhrzeit" name "Uhrzeit" type="time" required><br/> <!--TODO Uhrzeit an Öffnungszeiten anpassen-->
-                    <label for"personen>Anzahl der Personen</label>
+                    <label for="uhrzeit">Uhrzeit</label>
+                        <input id="uhrzeit" name="uhrzeit" type="time" required><br/> <!--TODO Uhrzeit an Öffnungszeiten anpassen-->
+                    <label for="personen">Anzahl der Personen</label>
                         <input id="personen" name="Personen" type="number" required maxlength="10"><br/>
                     <label for="sonstiges">Sonstige Angaben oder Hinweise zur Reservierung</label>
                         <textarea id="sonstiges" title="Hier kannst weitere Hinweise zur Reservierung hinterlegen" name="sonstiges" rows="4" cols="40" maxlength="100"></textarea>
